Add user info retrieval, reset password functionality, and enhance cookie options

--- a/templates/welcome.ejs
+++ b/templates/welcome.ejs
@@ -55,7 +55,7 @@
                 If you have any questions or need assistance, don't hesitate to
                 reach out to us.
             </p>
-            <a href="https://github.com" target="_blank" class="button"
+            <a href="https://github.com/Asifedit" target="_blank" class="button"
                 >Visit GitHub</a
             >
             <div class="footer">
